Updated ThankYouMessage layout, fixed confirmation overlap on Mobile Landscape

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-*{
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
-  }
-  
-  body{
-    font-size: 18px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 18px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
